--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,12 +2,7 @@
 # use ci-master https://github.com/metanorma/metanorma-build-scripts
 name: docker
 
-on:
-  push:
-    branch: master
-  pull_request:
-    branches:
-    - '**'
+on: [push, pull_request]
 
 jobs:
   build:
