--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -19,9 +19,13 @@ jobs:
           auth_header="$(git config --local --get http.https://github.com/.extraheader)"
           git submodule sync --recursive
           git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
-      - name: Bundle
+      - uses: actions/setup-go@v2-beta
+        with:
+          go-version: '^1.13.1'
+      - name: Install yq
         run: |
-          bundle install --jobs 4 --retry 3
+          GO111MODULE=on go get github.com/mikefarah/yq/v3
+          ln -s $GOPATH/bin/yq /usr/local/bin/yq
       - name: Build document in the Metanorma container
         run: |
           make clean all publish
