--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -35,3 +35,5 @@ jobs:
       - uses: actions-mn/setup@master
 
       - run: metanorma site generate . -o published -c metanorma.yml --agree-to-terms
+        env:
+          GIT_TRACE: 1
